# Complaint-Management-System-Final-Project

./: Dockerfile.fastapi  Dockerfile.streamlit  README.md  alembic.ini  docker-compose.yml  pyproject.toml  streamlit_app.py
alembic/: env.py  readme.md
alembic/versions/: a4bcb915c9bb_.py  readme.md
app/: auth.py  database.py  init.py  kafka_consumer.py  kafka_producer.py  main.py  models.py  readme.md  schemas.py
app/__pycache__/: readme.md
tests/: readme.md
